[gd_scene load_steps=11 format=3 uid="uid://dkqrus6hr117o"]

[ext_resource type="Texture2D" uid="uid://dnp5sxvye4o26" path="res://sprites/black_background.png" id="1_0wfyh"]
[ext_resource type="Script" uid="uid://co42gk8ickp8f" path="res://scripts/main.gd" id="1_jyhfs"]
[ext_resource type="PackedScene" uid="uid://cnjw6v2scvci0" path="res://scenes/wolverine.tscn" id="2_sugp2"]
[ext_resource type="Texture2D" uid="uid://pd018cgmrfn0" path="res://sprites/2d_lights_and_shadows_neutral_point_light.webp" id="3_sugp2"]
[ext_resource type="PackedScene" uid="uid://b80h6qst1an6c" path="res://scenes/hud.tscn" id="3_tbgi4"]
[ext_resource type="PackedScene" uid="uid://c683o8u7252o1" path="res://scenes/cube.tscn" id="4_tefeu"]
[ext_resource type="PackedScene" uid="uid://cqw51thqr3arx" path="res://scenes/bikini.tscn" id="5_choun"]
[ext_resource type="PackedScene" uid="uid://k7rx60tmaubr" path="res://scenes/naruto.tscn" id="6_ya4ey"]
[ext_resource type="PackedScene" uid="uid://brxyjcetrqunb" path="res://scenes/stellar_blade.tscn" id="7_eb6dy"]
[ext_resource type="PackedScene" uid="uid://dxg58jcq2itr2" path="res://scenes/rpg_maker.tscn" id="8_trceg"]

[node name="Main" type="Node2D"]
script = ExtResource("1_jyhfs")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(611, 334)
texture = ExtResource("1_0wfyh")
metadata/_edit_lock_ = true

[node name="Cube" parent="." instance=ExtResource("4_tefeu")]

[node name="Wolverine" parent="." instance=ExtResource("2_sugp2")]
visible = false
position = Vector2(377, 359)
scale = Vector2(0.829269, 0.829269)
metadata/_edit_lock_ = true

[node name="Bikini" parent="." instance=ExtResource("5_choun")]
visible = false

[node name="Naruto" parent="." instance=ExtResource("6_ya4ey")]
visible = false

[node name="StellarBlade" parent="." instance=ExtResource("7_eb6dy")]
visible = false

[node name="RPGMaker" parent="." instance=ExtResource("8_trceg")]
visible = false

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(853, 353)
energy = 9.52
texture = ExtResource("3_sugp2")
texture_scale = 28.27
height = 66.0
metadata/_edit_lock_ = true

[node name="HUD" parent="." instance=ExtResource("3_tbgi4")]

[node name="HUDBackground" parent="HUD" index="0"]
position = Vector2(954.5, 325)

[node name="ScaleLabel" parent="HUD" index="1"]
offset_left = 779.0
offset_top = 11.0
offset_right = 853.0
offset_bottom = 53.0

[node name="ScaleSlider" parent="HUD" index="2"]
offset_left = 935.0
offset_top = 28.0
offset_right = 1123.0
offset_bottom = 44.0

[node name="EnergyLabel" parent="HUD" index="3"]
offset_left = 779.0
offset_top = 48.0
offset_right = 878.0
offset_bottom = 90.0

[node name="EnergySlider" parent="HUD" index="4"]
offset_left = 935.0
offset_top = 65.0
offset_right = 1123.0
offset_bottom = 81.0

[node name="ShadowLabel" parent="HUD" index="5"]
offset_left = 779.0
offset_top = 91.0
offset_right = 893.0
offset_bottom = 133.0

[node name="ShadowSlider" parent="HUD" index="6"]
offset_left = 935.0
offset_top = 108.0
offset_right = 1123.0
offset_bottom = 124.0

[node name="HeightLabel" parent="HUD" index="7"]
offset_left = 779.0
offset_top = 132.0
offset_right = 893.0
offset_bottom = 174.0

[node name="HeightSlider" parent="HUD" index="8"]
offset_left = 935.0
offset_top = 149.0
offset_right = 1123.0
offset_bottom = 165.0

[node name="CubeButton" parent="HUD" index="9"]
offset_left = 785.0
offset_top = 229.0
offset_right = 879.0
offset_bottom = 286.0

[node name="WolverineButton" parent="HUD" index="10"]
offset_left = 785.0
offset_top = 296.0
offset_right = 963.0
offset_bottom = 353.0

[node name="BikiniButton" parent="HUD" index="11"]
offset_left = 785.0
offset_top = 366.0
offset_right = 892.0
offset_bottom = 423.0

[node name="NarutoButton" parent="HUD" index="12"]
offset_left = 785.0
offset_top = 434.0
offset_right = 913.0
offset_bottom = 491.0

[node name="StellarBladeButton" parent="HUD" index="13"]
offset_left = 785.0
offset_top = 502.0
offset_right = 1005.0
offset_bottom = 559.0

[node name="RPGMakerButton" parent="HUD" index="14"]
offset_left = 785.0
offset_top = 571.0
offset_right = 983.0
offset_bottom = 628.0

[connection signal="pressed" from="HUD/CubeButton" to="." method="_on_cube_button_pressed"]
[connection signal="pressed" from="HUD/WolverineButton" to="." method="_on_wolverine_button_pressed"]
[connection signal="pressed" from="HUD/BikiniButton" to="." method="_on_bikini_button_pressed"]
[connection signal="pressed" from="HUD/NarutoButton" to="." method="_on_naruto_button_pressed"]
[connection signal="pressed" from="HUD/StellarBladeButton" to="." method="_on_stellar_blade_button_pressed"]
[connection signal="pressed" from="HUD/RPGMakerButton" to="." method="_on_rpg_maker_button_pressed"]

[editable path="HUD"]
